# AutoEval

./: LICENSE  pyproject.toml
evaluators/: confidence.py
metrics/: comparison.py
tests/: compare_real_estimated_cross_accuracy_test.py  confidence_threshold_eval_test.py  estimate_test.py  score_error_test.py
